Mod Support - Woodcutting now works. Still need to add # of drops from a given block.

--- a/src/main/resources/blocks.yml
+++ b/src/main/resources/blocks.yml
@@ -44,6 +44,7 @@ Mining:
         ID: 999
         Data_Value: 0
         XP_Gain: 99
+        Is_Ore: true
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
@@ -51,6 +52,7 @@ Mining:
         ID: 999
         Data_Value: 0
         XP_Gain: 99
+        Is_Ore: true
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
@@ -63,6 +65,7 @@ Woodcutting:
         ID: 999
         Data_Value: 0
         XP_Gain: 99
+        Is_Log: true
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
@@ -70,6 +73,7 @@ Woodcutting:
         ID: 999
         Data_Value: 0
         XP_Gain: 99
+        Is_Log: true
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
