Mod support - able to define tiers for custom blocks now.
Tier 1 - breaks with wood/gold
Tier 2 - breaks with stone
Tier 3 - breaks with iron
Tier 4 - breaks with diamond

--- a/src/main/resources/blocks.yml
+++ b/src/main/resources/blocks.yml
@@ -49,6 +49,7 @@ Mining:
         Data_Value: 0
         XP_Gain: 99
         Is_Ore: true
+        Tier: 1
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
@@ -58,6 +59,7 @@ Mining:
         Data_Value: 0
         XP_Gain: 99
         Is_Ore: true
+        Tier: 1
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
