--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -110,6 +110,15 @@ Abilities:
         Serrated_Strikes: 240
         Tree_Feller: 240
         Super_Breaker: 240
+    Max_Seconds:
+        Blast_Mining: 0
+        Giga_Drill_Breaker: 0
+        Berserk: 0
+        Green_Terra: 0
+        Skull_Splitter: 0
+        Serrated_Strikes: 0
+        Tree_Feller: 0
+        Super_Breaker: 0
     Limits:
        Tree_Feller_Threshold: 500
     Tools:
