--- a/src/main/resources/blocks.yml
+++ b/src/main/resources/blocks.yml
@@ -9,7 +9,8 @@ Excavation:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
     Block_2:
         ID: 999
         Data_Value: 0
@@ -17,7 +18,8 @@ Excavation:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
 
 #
 #  Settings for Custom Herbalism Blocks
@@ -30,7 +32,8 @@ Herbalism:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
     Block_2:
         ID: 999
         Data_Value: 0
@@ -38,7 +41,8 @@ Herbalism:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
 
 #
 #  Settings for Custom Mining Blocks
@@ -53,7 +57,8 @@ Mining:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
     Block_2:
         ID: 999
         Data_Value: 0
@@ -63,7 +68,8 @@ Mining:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
 
 #
 #  Settings for Custom Woodcutting Blocks
@@ -77,7 +83,8 @@ Woodcutting:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
     Block_2:
         ID: 999
         Data_Value: 0
@@ -86,4 +93,5 @@ Woodcutting:
         Drop_Item: false
         Drop_Item_ID: 999
         Drop_Item_Data_Value: 0
-        Drop_Item_Amount: 1
+        Min_Drop_Item_Amount: 1
+        Max_Drop_Item_Amount: 1
