Add player command to reset skill levels

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -321,6 +321,8 @@ Commands:
         Enabled: true
     mcstats:
         Enabled: true
+    skillreset:
+        Enabled: true
     mcability:
         Enabled: true
     party:
