Updating modified block storage to a region-style format.

--- a/src/main/resources/hidden.yml
+++ b/src/main/resources/hidden.yml
@@ -5,3 +5,5 @@
 Options:
     # true to use Chunklets metadata store system, false to disable
     Chunklets: true
+    # Square root of the number of chunks to convert per tick.
+    ConversionRate: 1
