Adding Fishermans Diet ability to fishing.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -333,12 +333,15 @@ permissions:
             mcmmo.ability.fishing.shakemob: true
             mcmmo.ability.fishing.treasures: true
             mcmmo.ability.fishing.magic: true
+            mcmmo.ability.fishing.fishermansdiet: true
     mcmmo.ability.fishing.shakemob:
         description: Allows access to the Shake Mob ability
     mcmmo.ability.fishing.treasures:
         description: Allows treasure drops from Fishing
     mcmmo.ability.fishing.magic:
         description: Allows enchanted drops from Fishing
+    mcmmo.ability.fishing.fishermansdiet:
+        description: Allows access to the Fishermans's Diet ability
     mcmmo.ability.mining.*:
         description: Allows access to all Mining abilities
         children:
