New Salvage ability for Repair!
Added a fully working ability to Repair. With this ability you can
salvage items and get bars in return.

- Added new permission node for Salvage ability
- Added new config options for Salvage
- Added new locale strings for Salvage
- Added a check to make sure that Repair Anvil != Salvage Anvil

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -172,6 +172,11 @@ Skills:
         Level_Cap: 0
         Anvil_Messages: true
         Anvil_ID: 42
+        Salvage_enabled: true
+        Salvage_Anvil_ID: 41
+        Salvage_UnlockLevel: 600
+        Salvage_tools: true
+        Salvage_armor: true
     Swords:
         Enabled_For_PVP: true
         Enabled_For_PVE: true
